<resources>
    <string name="communities_guideline">Communities Guideline</string>
    <string name="communities_guideline_description_1">This feature involves sending and receiving information with other community members. This may include your email, (application) tasks data, and (application) routines data. Please do not send any sensitive information!</string>
    <string name="communities_guideline_description_2">Violations such as hate speech, harassment, or spamming may result in your account being suspended or banned permanently.</string>
    <string name="create_community">Create community</string>
    <string name="create_community_description">By creating community you agree to share tasks data and application routines data.</string>
    <string name="manage_member">Manage member</string>
    <string name="manage_member_description">Total members: </string>
    <string name="routine_code">CODE: </string>
    <string name="join_community">Join community</string>
    <string name="join_community_description_1">You can only join 1 community. If you quit from community, you may have the tasks and routine data.</string>
    <string name="join_community_description_2">Please input the unique code to join community and wait the admin of the community to accept your request.</string>
    <string name="code">Code</string>
    <string name="text">text</string>
    <string name="app_name">ToDo Planner : Education Edition</string>
    <string name="app_version">version x.y.z</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="detail">Detail Title Full Title Full Title Full Title Full Title Full Title Full Title Full Title Full Title</string>
    <string name="field">…</string>
    <string name="quiz_materials_title">Quiz Materials</string>
    <string name="reschedule">Reschedule</string>
    <string name="to_pack">To-Pack</string>
    <string name="quiz">Quiz</string>
    <string name="add_plan_for_next_week">Add plan for next week</string>
    <string name="add_quiz_materials_here">Add quiz materials here</string>
    <string name="add_to_pack_here">add to-pack here</string>
    <string name="add_your_memo_here">Add your memo here</string>
    <string name="quiz_materials">Quiz Materials</string>
    <string name="today">Today</string>
    <string name="upcoming">Upcoming</string>
    <string name="add_task_label">Add Task</string>
    <string name="all_event">All Event</string>
    <string name="communities">Communities</string>
    <string name="dd_mm_yyyy_format">DD/mm/YYYY</string>
    <string name="next_day">Next day</string>
    <string name="previous_day">Previous day</string>
    <string name="search_here">Search here</string>
    <string name="theme_mode">Theme mode</string>
    <string name="theme_mode_status_light">light</string>
    <string name="theme_mode_status_dark">dark</string>
    <string name="greeting_in_profile">Hi,</string>
    <string name="username_default_profile">You are not logged in</string>
    <string name="login_status_default_profile">Login here</string>
    <string name="manage_your_application_here">Manage your application here</string>
    <string name="routines_management">Routines management</string>
    <string name="routines_management_description">template, session, routines, tasks</string>
    <string name="app_language">App language</string>
    <string name="app_language_description_Example">English</string>
    <string name="settings">Settings</string>
    <string name="storage">Storage</string>
    <string name="storage_description">This section provides you with information about the amount of tasks and routines stored and allows you to delete all data. However, please note that this action cannot be undone.</string>
    <string name="tasks_and_routines">Tasks and Routines</string>
    <string name="tasks">tasks</string>
    <string name="routines">routines</string>
    <string name="permissions">Permissions</string>
    <string name="permissions_description">This feature allows you to manage push notifications and alert or reminder permissions using the checkboxes provided in each option.</string>
    <string name="push_notification">Push Notification</string>
    <string name="push_notification_description">Allows the app to show notifications</string>
    <string name="alert_and_reminder">Alert and Reminder</string>
    <string name="alert_and_reminder_description">Allows the app to remind you of incoming tasks</string>
    <string name="settings_description"><![CDATA[storage, permission, terms & services]]></string>
    <string name="communities_settings_description">create or join communities</string>
    <string name="community_manager_description">Make your community better by managing it properly. Don’t admit random member unless you know them.</string>
    <string name="search_member">Search member</string>
    <string name="admit">Admit</string>
    <string name="kick">Kick</string>
    <string name="beta">BETA</string>
    <string name="help">Help</string>
    <string name="help_description">features description, about us</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="open_routines_management">Open routines management</string>
    <string name="open_language_settings">open language settings</string>
    <string name="open_settings">open settings</string>
    <string name="open_communities_settings">open communities settings</string>
    <string name="open_help">open help</string>
    <string name="times_used">used</string>
    <string name="_0">0</string>
    <string name="interval_time_format">HH:MM - HH:MM</string>
    <string name="sunday_short">Sun</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="new_routine">New Routine</string>
    <string name="edit_routine">Edit Routine</string>
    <string name="routine_title_hint">Routine Title</string>
    <string name="description">Description</string>
    <string name="start_date_hint">Start Date</string>
    <string name="end_date_hint">End Date</string>
    <string name="sessions">Sessions</string>
    <string name="save">Save</string>
    <string name="session_title">Session Title</string>
    <string name="start_time_hint">Start</string>
    <string name="end_time_hint">End</string>
    <string name="new_session">New Session</string>
    <string name="edit_session">Edit Session</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_end_date">Select end date</string>
    <string name="error_msg_title_empty">Title cannot be empty</string>
    <string name="error_msg_start_time_empty">Start time cannot be empty</string>
    <string name="error_msg_end_time_empty">End time cannot be empty</string>
    <string name="error_msg_no_days_selected_session_form">Please select at least one day</string>
    <string name="error_msg_time_invalid_format">Invalid Format</string>
    <string name="error_msg_start_date_empty">Start date cannot be empty</string>
    <string name="error_msg_end_date_empty">End date cannot be empty</string>
    <string name="error_msg_session_empty">Please add at least one session</string>
    <string name="error_msg_more_than_20">Location name must less or equals then 20 characters</string>
    <string name="please_choose_one_of_the_following_routines">Please choose one of the following routines</string>
    <string name="search_routines">Search routines</string>
    <string name="you_have_not_set_a_default_routine">You have not set a default routine</string>
    <string name="set_default_routine">Set default routine</string>
    <string name="total_routines">Total routines</string>
    <string name="create_new_routine">Create New Routine</string>
    <string name="no_routine_selected">No routine selected</string>
    <string name="cancel_action">Cancel action</string>
    <string name="routine_detail">Routine Detail</string>
    <string name="session_used">session used</string>
    <string name="days">Days</string>
    <string name="see_details">see details</string>
    <string name="default_char">#</string>
    <string name="usages">Usages</string>
    <string name="expired_in">Expired in</string>
    <string name="sessions_day_avg">sessions / day (avg)</string>
    <string name="title">Title</string>
    <string name="default_select_routines_template">Select Routines Template</string>
    <string name="default_select_session">Select Session</string>
    <string name="default_select_day">Select Day</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="location_name">Location Name</string>
    <string name="google_maps_link">Google Maps Link</string>
    <string name="share_to_community">Share to community</string>
    <string name="default_community_name">Community Name</string>
    <string name="edit_task">Edit Task</string>
    <string name="new_task">New Task</string>
    <string name="select">Select</string>
    <string name="error_no_routine_template_selected">Please select routine template first</string>
    <string name="error_no_session_selected">Please select session first</string>
    <string name="error_no_day_selected">Please select day first</string>
    <string name="custom_session">Custom Session</string>
    <string name="error_time_interval">End time must be greater than start time</string>
    <string name="failed_to_create_task">Failed to create task</string>
    <string name="error_msg_day_empty">You must select the day</string>
    <string name="error_msg_time_is_not_valid">Time is not valid</string>
    <string name="error_msg_community_empty">There is no community selected</string>
    <string name="item_delete_from_routines">Delete from routines</string>
    <string name="item_communities_settings">Communities Settings</string>
    <string name="item_reset_this_section">Reset this section</string>
    <string name="item_edit">Edit</string>
    <string name="delete_task_warning_message_confirmation">Please be aware that once you delete this task and all its associated notes and subtasks, it cannot be retrieved. Are you sure you want to proceed?</string>
    <string name="dialog_delete_task_warning_title">Delete Task</string>
    <string name="cancel">Cancel</string>
    <string name="default_literal">Default</string>
    <string name="edit_description">Edit description</string>
    <string name="editing">editing…</string>
    <string name="last_edited">Last edited</string>
    <string name="saved">saved</string>
    <string name="no_week_selected">No week selected</string>
    <string name="add_next_plan_memo_invalid">Can\'t add memo</string>
    <string name="notification_channel_main_name">Notes Reminder Notifications</string>
    <string name="notification_channel_main_description">Notifications for notes alarms. For example, quiz and to-pack. This notification may consume battery. Feels free to disable it if you don\'t need it.</string>
    <string name="reschedule_to">reschedule to</string>
    <string name="select_the_date">Select the date</string>
    <string name="reschedule_all_following_meet">Reschedule all following meet</string>
    <string name="default_reschedule_option">Only this time</string>
    <string name="reschedule_option_only_this_time">Only this time</string>
    <string name="reschedule_option_all_following_meet">All following meet</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
</resources>