<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".second_layer.session.SessionFormFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="150dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_session_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/session_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="8dp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_schedule_outline"
                android:hint="@string/start_time_hint"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_session_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:maxLength="5"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/end_time_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_session_title"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_schedule_outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:maxLines="1"
                    android:maxLength="5"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_selected_days_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:text="Select days"
                android:textAppearance="?attr/textAppearanceTitleLarge"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_start_time" />

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:flexWrap="wrap"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_selected_days_label">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_tags_sunday"
                    style="@style/Tags.Chip"
                    android:text="@string/sunday_short"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_tags_monday"
                    style="@style/Tags.Chip"
                    android:text="@string/monday_short"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_tags_tuesday"
                    style="@style/Tags.Chip"
                    android:text="@string/tuesday_short"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_tags_wednesday"
                    style="@style/Tags.Chip"
                    android:text="@string/wednesday_short"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_tags_thursday"
                    style="@style/Tags.Chip"
                    android:text="@string/thursday_short"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_tags_friday"
                    style="@style/Tags.Chip"
                    android:text="@string/friday_short"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_tags_saturday"
                    style="@style/Tags.Chip"
                    android:text="@string/saturday_short"
                    />

            </com.google.android.flexbox.FlexboxLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_flying_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save_route_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="54dp"
        android:elevation="4dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_flying_button"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>