<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view_session_detail"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="?attr/colorSurfaceContainerLow"
    app:strokeWidth="0dp"
    android:layout_marginBottom="6dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_session_title_item_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/field"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_time_session_item_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_schedule_outline_16"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/interval_time_format"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_session_title_item_detail" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_time_session_item_detail">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tags_sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday_short"
                    android:textAppearance="?attr/textAppearanceLabelSmall"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:background="@drawable/rounded_rectangle_8dp"
                    android:backgroundTint="?attr/colorPrimaryContainer"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:layout_marginEnd="6dp"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tags_monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monday_short"
                    android:textAppearance="?attr/textAppearanceLabelSmall"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:background="@drawable/rounded_rectangle_8dp"
                    android:backgroundTint="?attr/colorPrimaryContainer"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:layout_marginEnd="6dp"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tags_tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday_short"
                    android:textAppearance="?attr/textAppearanceLabelSmall"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:background="@drawable/rounded_rectangle_8dp"
                    android:backgroundTint="?attr/colorPrimaryContainer"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:layout_marginEnd="6dp"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tags_wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday_short"
                    android:textAppearance="?attr/textAppearanceLabelSmall"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:background="@drawable/rounded_rectangle_8dp"
                    android:backgroundTint="?attr/colorPrimaryContainer"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:layout_marginEnd="6dp"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tags_thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday_short"
                    android:textAppearance="?attr/textAppearanceLabelSmall"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:background="@drawable/rounded_rectangle_8dp"
                    android:backgroundTint="?attr/colorPrimaryContainer"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:layout_marginEnd="6dp"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tags_friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fridat_short"
                    android:textAppearance="?attr/textAppearanceLabelSmall"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:background="@drawable/rounded_rectangle_8dp"
                    android:backgroundTint="?attr/colorPrimaryContainer"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:layout_marginEnd="6dp"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tags_saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday_short"
                    android:textAppearance="?attr/textAppearanceLabelSmall"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:background="@drawable/rounded_rectangle_8dp"
                    android:backgroundTint="?attr/colorPrimaryContainer"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:layout_marginEnd="6dp"
                    />

            </LinearLayout>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>